// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`GrantCard urgency — snapshots > closed 스냅샷 1`] = `
<div
  class="relative group"
>
  <a
    class="block glass rounded-2xl border border-emerald-500/20 hover:border-emerald-500/40 opacity-60 p-5 transition-all hover:shadow-xl hover:shadow-emerald-500/5 shine"
    href="/grants/g-2026-05-25?"
  >
    <div
      class="flex items-start justify-between gap-3 mb-3"
    >
      <div
        class="flex-1 min-w-0 pr-10"
      >
        <div
          class="flex items-center gap-2 mb-1.5 flex-wrap"
        >
          <span
            class="text-[11px] px-2 py-0.5 rounded-md bg-white/5 text-gray-400 font-medium"
          >
            운영자금
          </span>
          <span
            class="text-[11px] text-gray-600"
          >
            테스트청
          </span>
        </div>
        <h3
          class="text-base font-bold text-white leading-snug"
        >
          지원사업 테스트
        </h3>
      </div>
      <div
        class="flex flex-col items-end gap-1.5 flex-shrink-0"
      >
        <span
          class="text-[11px] font-bold px-2.5 py-1 rounded-lg border bg-emerald-500/10 text-emerald-400 border-emerald-500/20 flex items-center gap-1.5 "
        >
          <span
            class="w-1.5 h-1.5 rounded-full bg-emerald-400"
          />
          적합도 높음
        </span>
        <span
          class="text-[10px] text-gray-500"
        >
          합격률 ~
          30
          %
        </span>
        <span
          class="text-xs font-bold text-red-500"
        >
          마감
        </span>
      </div>
    </div>
    <p
      class="text-sm text-gray-400 mb-3 line-clamp-2 leading-relaxed"
    >
      조건이 잘 맞아요
    </p>
    <div
      class="flex items-center justify-between pt-3 border-t border-white/5"
    >
      <span
        class="text-sm font-bold text-cyan-400"
      >
        최대 1,000만원
      </span>
      <span
        class="text-[11px] text-gray-600"
      >
        마감 
        2026-05-25
      </span>
    </div>
  </a>
  <button
    aria-label="즐겨찾기 추가"
    class="absolute top-3 right-3 w-8 h-8 rounded-lg flex items-center justify-center transition-all
          bg-white/5 text-gray-600 hover:bg-white/10 hover:text-yellow-400 opacity-0 group-hover:opacity-100"
  >
    ☆
  </button>
</div>
`;

exports[`GrantCard urgency — snapshots > critical 스냅샷 1`] = `
<div
  class="relative group"
>
  <a
    class="block glass rounded-2xl border border-emerald-500/20 hover:border-emerald-500/40 ring-2 ring-red-500/30 animate-[pulse_2s_ease-in-out_infinite] p-5 transition-all hover:shadow-xl hover:shadow-emerald-500/5 shine"
    href="/grants/g-2026-05-31?"
  >
    <div
      class="mb-3 -mx-1"
    >
      <span
        class="inline-flex items-center gap-1 text-[11px] font-bold px-2.5 py-1 rounded-full border bg-red-500/15 text-red-300 border-red-500/30"
      >
        ⚡ 지금 바로 신청!
      </span>
    </div>
    <div
      class="flex items-start justify-between gap-3 mb-3"
    >
      <div
        class="flex-1 min-w-0 pr-10"
      >
        <div
          class="flex items-center gap-2 mb-1.5 flex-wrap"
        >
          <span
            class="text-[11px] px-2 py-0.5 rounded-md bg-white/5 text-gray-400 font-medium"
          >
            운영자금
          </span>
          <span
            class="text-[11px] text-gray-600"
          >
            테스트청
          </span>
        </div>
        <h3
          class="text-base font-bold text-white leading-snug"
        >
          지원사업 테스트
        </h3>
      </div>
      <div
        class="flex flex-col items-end gap-1.5 flex-shrink-0"
      >
        <span
          class="text-[11px] font-bold px-2.5 py-1 rounded-lg border bg-emerald-500/10 text-emerald-400 border-emerald-500/20 flex items-center gap-1.5 "
        >
          <span
            class="w-1.5 h-1.5 rounded-full bg-emerald-400"
          />
          적합도 높음
        </span>
        <span
          class="text-[10px] text-gray-500"
        >
          합격률 ~
          30
          %
        </span>
        <span
          class="text-xs font-bold text-red-400"
        >
          D-1
        </span>
      </div>
    </div>
    <p
      class="text-sm text-gray-400 mb-3 line-clamp-2 leading-relaxed"
    >
      조건이 잘 맞아요
    </p>
    <div
      class="flex items-center justify-between pt-3 border-t border-white/5"
    >
      <span
        class="text-sm font-bold text-cyan-400"
      >
        최대 1,000만원
      </span>
      <span
        class="text-[11px] text-gray-600"
      >
        마감 
        2026-05-31
      </span>
    </div>
  </a>
  <button
    aria-label="즐겨찾기 추가"
    class="absolute top-3 right-3 w-8 h-8 rounded-lg flex items-center justify-center transition-all
          bg-white/5 text-gray-600 hover:bg-white/10 hover:text-yellow-400 opacity-0 group-hover:opacity-100"
  >
    ☆
  </button>
</div>
`;

exports[`GrantCard urgency — snapshots > normal 스냅샷 1`] = `
<div
  class="relative group"
>
  <a
    class="block glass rounded-2xl border border-emerald-500/20 hover:border-emerald-500/40  p-5 transition-all hover:shadow-xl hover:shadow-emerald-500/5 shine"
    href="/grants/g-2026-06-29?"
  >
    <div
      class="flex items-start justify-between gap-3 mb-3"
    >
      <div
        class="flex-1 min-w-0 pr-10"
      >
        <div
          class="flex items-center gap-2 mb-1.5 flex-wrap"
        >
          <span
            class="text-[11px] px-2 py-0.5 rounded-md bg-white/5 text-gray-400 font-medium"
          >
            운영자금
          </span>
          <span
            class="text-[11px] text-gray-600"
          >
            테스트청
          </span>
        </div>
        <h3
          class="text-base font-bold text-white leading-snug"
        >
          지원사업 테스트
        </h3>
      </div>
      <div
        class="flex flex-col items-end gap-1.5 flex-shrink-0"
      >
        <span
          class="text-[11px] font-bold px-2.5 py-1 rounded-lg border bg-emerald-500/10 text-emerald-400 border-emerald-500/20 flex items-center gap-1.5 "
        >
          <span
            class="w-1.5 h-1.5 rounded-full bg-emerald-400"
          />
          적합도 높음
        </span>
        <span
          class="text-[10px] text-gray-500"
        >
          합격률 ~
          30
          %
        </span>
        <span
          class="text-xs font-bold text-gray-500"
        >
          D-30
        </span>
      </div>
    </div>
    <p
      class="text-sm text-gray-400 mb-3 line-clamp-2 leading-relaxed"
    >
      조건이 잘 맞아요
    </p>
    <div
      class="flex items-center justify-between pt-3 border-t border-white/5"
    >
      <span
        class="text-sm font-bold text-cyan-400"
      >
        최대 1,000만원
      </span>
      <span
        class="text-[11px] text-gray-600"
      >
        마감 
        2026-06-29
      </span>
    </div>
  </a>
  <button
    aria-label="즐겨찾기 추가"
    class="absolute top-3 right-3 w-8 h-8 rounded-lg flex items-center justify-center transition-all
          bg-white/5 text-gray-600 hover:bg-white/10 hover:text-yellow-400 opacity-0 group-hover:opacity-100"
  >
    ☆
  </button>
</div>
`;

exports[`GrantCard urgency — snapshots > soon 스냅샷 1`] = `
<div
  class="relative group"
>
  <a
    class="block glass rounded-2xl border border-emerald-500/20 hover:border-emerald-500/40  p-5 transition-all hover:shadow-xl hover:shadow-emerald-500/5 shine"
    href="/grants/g-2026-06-09?"
  >
    <div
      class="flex items-start justify-between gap-3 mb-3"
    >
      <div
        class="flex-1 min-w-0 pr-10"
      >
        <div
          class="flex items-center gap-2 mb-1.5 flex-wrap"
        >
          <span
            class="text-[11px] px-2 py-0.5 rounded-md bg-white/5 text-gray-400 font-medium"
          >
            운영자금
          </span>
          <span
            class="text-[11px] text-gray-600"
          >
            테스트청
          </span>
        </div>
        <h3
          class="text-base font-bold text-white leading-snug"
        >
          지원사업 테스트
        </h3>
      </div>
      <div
        class="flex flex-col items-end gap-1.5 flex-shrink-0"
      >
        <span
          class="text-[11px] font-bold px-2.5 py-1 rounded-lg border bg-emerald-500/10 text-emerald-400 border-emerald-500/20 flex items-center gap-1.5 "
        >
          <span
            class="w-1.5 h-1.5 rounded-full bg-emerald-400"
          />
          적합도 높음
        </span>
        <span
          class="text-[10px] text-gray-500"
        >
          합격률 ~
          30
          %
        </span>
        <span
          class="text-xs font-bold text-yellow-400"
        >
          D-10
        </span>
      </div>
    </div>
    <p
      class="text-sm text-gray-400 mb-3 line-clamp-2 leading-relaxed"
    >
      조건이 잘 맞아요
    </p>
    <div
      class="flex items-center justify-between pt-3 border-t border-white/5"
    >
      <span
        class="text-sm font-bold text-cyan-400"
      >
        최대 1,000만원
      </span>
      <span
        class="text-[11px] text-gray-600"
      >
        마감 
        2026-06-09
      </span>
    </div>
  </a>
  <button
    aria-label="즐겨찾기 추가"
    class="absolute top-3 right-3 w-8 h-8 rounded-lg flex items-center justify-center transition-all
          bg-white/5 text-gray-600 hover:bg-white/10 hover:text-yellow-400 opacity-0 group-hover:opacity-100"
  >
    ☆
  </button>
</div>
`;

exports[`GrantCard urgency — snapshots > urgent 스냅샷 1`] = `
<div
  class="relative group"
>
  <a
    class="block glass rounded-2xl border border-emerald-500/20 hover:border-emerald-500/40 ring-1 ring-orange-500/20 p-5 transition-all hover:shadow-xl hover:shadow-emerald-500/5 shine"
    href="/grants/g-2026-06-04?"
  >
    <div
      class="mb-3 -mx-1"
    >
      <span
        class="inline-flex items-center gap-1 text-[11px] font-bold px-2.5 py-1 rounded-full border bg-orange-500/15 text-orange-300 border-orange-500/30"
      >
        ⏰ 마감 임박
      </span>
    </div>
    <div
      class="flex items-start justify-between gap-3 mb-3"
    >
      <div
        class="flex-1 min-w-0 pr-10"
      >
        <div
          class="flex items-center gap-2 mb-1.5 flex-wrap"
        >
          <span
            class="text-[11px] px-2 py-0.5 rounded-md bg-white/5 text-gray-400 font-medium"
          >
            운영자금
          </span>
          <span
            class="text-[11px] text-gray-600"
          >
            테스트청
          </span>
        </div>
        <h3
          class="text-base font-bold text-white leading-snug"
        >
          지원사업 테스트
        </h3>
      </div>
      <div
        class="flex flex-col items-end gap-1.5 flex-shrink-0"
      >
        <span
          class="text-[11px] font-bold px-2.5 py-1 rounded-lg border bg-emerald-500/10 text-emerald-400 border-emerald-500/20 flex items-center gap-1.5 "
        >
          <span
            class="w-1.5 h-1.5 rounded-full bg-emerald-400"
          />
          적합도 높음
        </span>
        <span
          class="text-[10px] text-gray-500"
        >
          합격률 ~
          30
          %
        </span>
        <span
          class="text-xs font-bold text-orange-400"
        >
          D-5
        </span>
      </div>
    </div>
    <p
      class="text-sm text-gray-400 mb-3 line-clamp-2 leading-relaxed"
    >
      조건이 잘 맞아요
    </p>
    <div
      class="flex items-center justify-between pt-3 border-t border-white/5"
    >
      <span
        class="text-sm font-bold text-cyan-400"
      >
        최대 1,000만원
      </span>
      <span
        class="text-[11px] text-gray-600"
      >
        마감 
        2026-06-04
      </span>
    </div>
  </a>
  <button
    aria-label="즐겨찾기 추가"
    class="absolute top-3 right-3 w-8 h-8 rounded-lg flex items-center justify-center transition-all
          bg-white/5 text-gray-600 hover:bg-white/10 hover:text-yellow-400 opacity-0 group-hover:opacity-100"
  >
    ☆
  </button>
</div>
`;

exports[`GrantCard urgency — snapshots > 상시 스냅샷 1`] = `
<div
  class="relative group"
>
  <a
    class="block glass rounded-2xl border border-emerald-500/20 hover:border-emerald-500/40  p-5 transition-all hover:shadow-xl hover:shadow-emerald-500/5 shine"
    href="/grants/g-상시?"
  >
    <div
      class="flex items-start justify-between gap-3 mb-3"
    >
      <div
        class="flex-1 min-w-0 pr-10"
      >
        <div
          class="flex items-center gap-2 mb-1.5 flex-wrap"
        >
          <span
            class="text-[11px] px-2 py-0.5 rounded-md bg-white/5 text-gray-400 font-medium"
          >
            운영자금
          </span>
          <span
            class="text-[11px] text-gray-600"
          >
            테스트청
          </span>
        </div>
        <h3
          class="text-base font-bold text-white leading-snug"
        >
          지원사업 테스트
        </h3>
      </div>
      <div
        class="flex flex-col items-end gap-1.5 flex-shrink-0"
      >
        <span
          class="text-[11px] font-bold px-2.5 py-1 rounded-lg border bg-emerald-500/10 text-emerald-400 border-emerald-500/20 flex items-center gap-1.5 "
        >
          <span
            class="w-1.5 h-1.5 rounded-full bg-emerald-400"
          />
          적합도 높음
        </span>
        <span
          class="text-[10px] text-gray-500"
        >
          합격률 ~
          30
          %
        </span>
        <span
          class="text-xs font-bold text-gray-500"
        >
          상시
        </span>
      </div>
    </div>
    <p
      class="text-sm text-gray-400 mb-3 line-clamp-2 leading-relaxed"
    >
      조건이 잘 맞아요
    </p>
    <div
      class="flex items-center justify-between pt-3 border-t border-white/5"
    >
      <span
        class="text-sm font-bold text-cyan-400"
      >
        최대 1,000만원
      </span>
      <span
        class="text-[11px] text-gray-600"
      >
        마감 
        상시
      </span>
    </div>
  </a>
  <button
    aria-label="즐겨찾기 추가"
    class="absolute top-3 right-3 w-8 h-8 rounded-lg flex items-center justify-center transition-all
          bg-white/5 text-gray-600 hover:bg-white/10 hover:text-yellow-400 opacity-0 group-hover:opacity-100"
  >
    ☆
  </button>
</div>
`;
